# FIT-BIT-IVS-2019-project

./: .editorconfig  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  Makefile  README.md  calculator_gui.glade  hodnoceni.txt
cmake/: uninstall.cmake
debian/: changelog  control  copyright  debhelper-build-stamp  fit-calc.install  install  rules
docker/: debian-testing.Dockerfile
docs/user/: Makefile  dokumentace.tex
plan/: xlipka02_xondra58_xraurp00_xreinh00_plan.md
profiling/: Makefile  zprava.tex
src/: AboutDialog.cpp  AboutDialog.h  CMakeLists.txt  GenericMathLib.cpp  MainWindow.cpp  MainWindow.h  MenuBar.cpp  MenuBar.h  TrigonometricMathLib.cpp  calculator.g4  main.cpp  main.h
src/antlr4-runtime/: calculatorBaseVisitor.cpp  calculatorBaseVisitor.h  calculatorLexer.cpp  calculatorLexer.h  calculatorLexer.tokens  calculatorParser.cpp  calculatorParser.h  calculatorVisitor.cpp  calculatorVisitor.h
src/grammar/: CMakeLists.txt  CustomErrorListener.cpp  CustomErrorListener.h  MathErrorListener.cpp  MathErrorListener.h  MathVisitor.cpp  MathVisitor.h  calculator.interp  calculator.tokens  calculatorBaseVisitor.cpp  calculatorBaseVisitor.h  calculatorLexer.cpp  calculatorLexer.h  calculatorLexer.interp  calculatorLexer.tokens  calculatorParser.cpp  calculatorParser.h  calculatorVisitor.cpp  calculatorVisitor.h
src/gui/: AboutDialog.cpp  AboutDialog.h  BackspaceButton.cpp  BackspaceButton.h  CMakeLists.txt  CleanButton.cpp  CleanButton.h  EqualsButton.cpp  EqualsButton.h  HelpTextView.cpp  HelpTextView.h  HelpWindow.cpp  HelpWindow.h  InputButton.cpp  InputButton.h  MainWindow.cpp  MainWindow.h  MenuBar.cpp  MenuBar.h  calculator_gui.glade  fit-calc.desktop
src/math/: CMakeLists.txt  GenericMathLib.cpp  GenericMathLib.h  PercentageMathLib.cpp  PercentageMathLib.h  TrigonometricMathLib.cpp  TrigonometricMathLib.h
src/profiling/: CMakeLists.txt  data10.csv  data100.csv  data1000.csv  makefile  profiling.C  profiling.cpp
tests/: CMakeLists.txt  GenericMathLibTest.cpp  PercentageMathLibTest.cpp  TrigonometricMathLibTest.cpp  main.cpp
tests/grammar/: calculatorBaseVisitorTest.cpp
tests/math/: GenericMathLibTest.cpp  PercentageMathLibTest.cpp  TrigonometricMathLibTest.cpp
